<resources>
    <string name="app_name">Mr Finch"'"s Antique BookStore</string>

    <!-- Misc Buttons -->
    <string name="log_out">Log Out</string>
    <string name="back">Back</string>

    <!-- Login Screen -->
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- Main Menu -->
    <string name="book_search">Book Search</string>
    <string name="orders">Orders</string>
    <string name="customers">Customers</string>
    <string name="employees">Employees</string>

    <!-- Modify/Add Text-->
    <string name="add_employee">Add Employee</string>
    <string name="modify_employee">Modify Employee</string>
    <string name="add_customer">Add Customer</string>
    <string name="modify_customer">Modify Customer</string>
    <string name="place_order">Place Order</string>
    <string name="add_order">Add Order</string>
    <string name="add_book">Add Book</string>

    <!-- Search Text-->
    <string name="search_customer">Search Customer</string>
    <string name="search_employee">Search Employee</string>
    <string name="search_orders">Search Order</string>
    <string name="search_book">Search Book</string>

    <!-- Purchase Text -->
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="cart">Cart</string>
    <string name="paid">Paid</string>
    <string name="complete">Complete</string>
    <string name="payment_type">Payment Type</string>

    <!-- Add Book Screen -->
    <string name="author_last">Author Last</string>
    <string name="author_first">Author First</string>
    <string name="title">Title</string>
    <string name="publisher">Publisher</string>
    <string name="publish_date">Publish Date</string>
    <string name="edition">Edition</string>
    <string name="cost">Cost</string>
    <string name="retail_price">Retail Price</string>
    <string name="rating">Rating</string>
    <string name="cover_type">Cover Type</string>
    <string name="genre">Genre</string>
    <string-array name="genre">
        <item>Fiction</item>
        <item>Non-fiction</item>
        <item>Science Fiction</item>
        <item>Romance</item>
        <item>Drama</item>
        <item>Cooking</item>
    </string-array>

    <!-- Employee / Customer -->
    <string name="customer">Customer</string>
    <string name="date">Date</string>
    <string name="employee">Employee</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="zip">Zip Code</string>
    <string name="books">Books</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="hire_date">Hire Date</string>
    <string name="sales">Sales</string>
    <string name="position">Position</string>
    <string-array name="position">
        <item>Part-Time</item>
        <item>Full-Time</item>
    </string-array>

    <string-array name="customers">
        <item>Steve Apple</item>
        <item>Nancy Dovolio</item>
    </string-array>


</resources>
