<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/employeesButton"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:onClick="handleButtons"
            android:visibility="invisible"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            android:text="@string/employees"/>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_gravity="center"
            android:onClick="handleButtons"
            android:background="@color/colorSilver"
            android:textColor="@color/colorWhite"
            android:text="@string/log_out"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
2
        <Button
            android:id="@+id/bookSearchButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            android:onClick="handleButtons"
            android:text="@string/book_search"/>

        <Button
            android:id="@+id/ordersButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/colorRed"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            android:onClick="handleButtons"
            android:text="@string/orders"/>

        <Button
            android:id="@+id/customersButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorGreen"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="50dp"
            android:textSize="50sp"
            android:onClick="handleButtons"
            android:text="@string/customers"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/addBooksButton"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:visibility="invisible"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            android:onClick="handleButtons"
            android:text="@string/add_book"/>

    </LinearLayout>

</LinearLayout>